fixed static pivot table wrong width behaviour

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -861,7 +861,7 @@
 		}
 	 &>table{
 			border-collapse: collapse;
-			width:100%;
+			width:auto;
 			border-bottom: 1px solid $tableLineSeparator;
 			tbody{
 				tr{
